chore: Fix title alignment in Spiffe and Spire documentation page

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -43,7 +43,7 @@ $light-separator: #e2e2e2
 @import "toc"
 
 .hero
-  margin: 1.5rem 2rem 1.5rem 2rem
+  margin: 2.5rem 1rem
   border-bottom: 1px solid #D9DCE0
 
 .hero.is-light
